[gd_scene load_steps=8 format=2]

[ext_resource path="res://GFX/Fonts/PxPlus_IBM_VGA8.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/DialoguePopup.gd" type="Script" id=2]
[ext_resource path="res://GFX/metalPanel_plate.png" type="Texture" id=3]
[ext_resource path="res://GFX/glassPanel.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Button.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="JohnPopup" type="Popup"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -930.0
margin_top = -350.0
margin_right = -10.0
margin_bottom = 350.0
rect_min_size = Vector2( 460, 0 )
theme = SubResource( 2 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="DisplayRect" type="NinePatchRect" parent="VBoxContainer"]
self_modulate = Color( 0.235294, 0.235294, 0.235294, 1 )
margin_right = 920.0
margin_bottom = 280.0
rect_min_size = Vector2( 0, 280 )
size_flags_horizontal = 3
texture = ExtResource( 3 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="DisplayGlass" type="NinePatchRect" parent="VBoxContainer/DisplayRect"]
light_mask = 3
margin_left = 4.0
margin_top = 4.0
margin_right = 914.0
margin_bottom = 274.0
texture = ExtResource( 4 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="DisplayText" type="RichTextLabel" parent="VBoxContainer/DisplayRect/DisplayGlass"]
margin_left = 12.0
margin_top = 12.0
margin_right = 897.0
margin_bottom = 257.0
bbcode_enabled = true
bbcode_text = "Yes SIR what is it now SIR?

Чего? Давай быстрее!"
text = "Yes SIR what is it now SIR?

Чего? Давай быстрее!"

[node name="ButtonRect" type="NinePatchRect" parent="VBoxContainer"]
self_modulate = Color( 0.235294, 0.235294, 0.235294, 1 )
margin_top = 284.0
margin_right = 920.0
margin_bottom = 700.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="ButtonContainer" type="VBoxContainer" parent="VBoxContainer/ButtonRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_vertical = 3
alignment = 2

[node name="Button" type="Button" parent="VBoxContainer/ButtonRect/ButtonContainer"]
margin_right = 912.0
margin_bottom = 99.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )

[node name="Label" type="Label" parent="VBoxContainer/ButtonRect/ButtonContainer/Button"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "placeholder button 1"
align = 1
valign = 1
autowrap = true

[node name="Button2" type="Button" parent="VBoxContainer/ButtonRect/ButtonContainer"]
margin_top = 103.0
margin_right = 912.0
margin_bottom = 202.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )

[node name="Label" type="Label" parent="VBoxContainer/ButtonRect/ButtonContainer/Button2"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "placeholder button 1"
align = 1
valign = 1
autowrap = true

[node name="Button3" type="Button" parent="VBoxContainer/ButtonRect/ButtonContainer"]
margin_top = 206.0
margin_right = 912.0
margin_bottom = 305.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )

[node name="Label" type="Label" parent="VBoxContainer/ButtonRect/ButtonContainer/Button3"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "placeholder button 1"
align = 1
valign = 1
autowrap = true

[node name="Button4" type="Button" parent="VBoxContainer/ButtonRect/ButtonContainer"]
margin_top = 309.0
margin_right = 912.0
margin_bottom = 408.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )

[node name="Label" type="Label" parent="VBoxContainer/ButtonRect/ButtonContainer/Button4"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "placeholder button 1"
align = 1
valign = 1
autowrap = true
[connection signal="pressed" from="VBoxContainer/ButtonRect/ButtonContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonRect/ButtonContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonRect/ButtonContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonRect/ButtonContainer/Button4" to="." method="_on_Button4_pressed"]
